fix spacing between table headers

--- a/src/components/Table/styles.css
+++ b/src/components/Table/styles.css
@@ -5,6 +5,7 @@
 .header-table {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   height: 46px;
   background: #f4f0f0;
   text-align: left;
